--- a/client/src/style.css
+++ b/client/src/style.css
@@ -156,3 +156,102 @@ h6 {
         }
     }
 }
+
+/* Filmgrid */
+
+.movie-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 1.5rem;
+}
+
+
+/* Filmkort */
+
+.movie-card {
+    display: grid;
+    grid-template-columns: auto;
+    border-radius: .5rem;
+    background-color: oklch(0.9702 0 0);
+    overflow: hidden;
+
+    @media (width >=60rem) {
+        grid-template-columns: 1fr 2fr;
+        row-gap: 1.5rem;
+    }
+}
+
+.movie-card__image {
+    overflow: hidden;
+
+    & img {
+        inline-size: 100%;
+        aspect-ratio: 1;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+
+.movie-card__content {
+    place-self: center center;
+    display: flex;
+    flex-flow: column wrap;
+    padding: 1.5rem;
+    gap: calc(1.5rem / 2);
+    text-overflow: ellipsis;
+}
+
+.movie-card__title {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.movie-card__description {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.movie-card__year {
+    font-weight: 400;
+}
+
+.movie-card__rating {
+    display: none;
+}
+
+/* .movie-card__divider {
+    border-block: 1px solid oklch(0 0 0);
+} */
+
+.movie-card__actions {
+    display: flex;
+    flex-flow: row wrap;
+    gap: .5rem;
+}
+
+.movie-card__button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    padding-inline: 1rem;
+    padding-block: .5rem;
+    border: 2px solid currentColor;
+    border-radius: .5rem;
+    block-size: 3rem;
+    font-size: 1rem;
+    font-weight: 700;
+    inline-size: 100%;
+
+    @media (width >=60rem) {
+        inline-size: fit-content;
+    }
+}
+
+.movie-card__button--watchlist[aria-pressed="true"] {
+    background-color: oklch(0 0 0);
+    color: oklch(1 0 0);
+}
