--- a/client/src/style.css
+++ b/client/src/style.css
@@ -268,21 +268,30 @@ h6 {
     block-size: 3rem;
     font-size: 1rem;
     font-weight: 700;
+    text-decoration: none;
     inline-size: 100%;
+    cursor: pointer;
+    touch-action: manipulation;
 
     @media (width >=60rem) {
         inline-size: fit-content;
     }
 }
 
+.movie-card__icon {
+    inline-size: 1.5rem;
+    block-size: 1.5rem;
+    color: inherit;
+}
+
 .movie-card__button--watchlist[aria-pressed="true"] {
-    background-color: oklch(0 0 0);
-    color: oklch(1 0 0);
+    background-color: oklch(0.7952 0.1617 86.05);
+    border-color: oklch(0 0 0);
 }
 
 .movie-card__button--watched[aria-pressed="true"] {
-    background-color: oklch(0 0 0);
-    color: oklch(1 0 0);
+    background-color: oklch(0.7227 0.192 149.58);
+    border-color: oklch(0 0 0);
 }
 
 .movie-card__button--details {
