--- a/client/src/style.css
+++ b/client/src/style.css
@@ -162,6 +162,7 @@ h6 {
 .search {
     border-radius: .5rem;
     background-color: oklch(1 0 0);
+    color: oklch(0 0 0);
 }
 
 .search__form {
@@ -221,7 +222,7 @@ h6 {
     padding-block: .5rem;
     background-color: oklch(0 0 0);
     color: oklch(1 0 0);
-    border: 2px solid  oklch(0 0 0);
+    border: 2px solid oklch(0 0 0);
     border-radius: .5rem;
     block-size: 3rem;
     font-size: 1rem;
