--- a/client/src/components/watchedFilter/template.html
+++ b/client/src/components/watchedFilter/template.html
@@ -2,14 +2,13 @@
     <label for="favorites">Favorites</label>
     <input type="checkbox" id="favorites" name="favorites" value="on" />
 
-    <fieldset id="rating">
-        <legend>Rating</legend>
-        <label for="min">Min</label>
-        <input type="number" id="min" name="min" min="0" max="5" value="0" />
-
-        <label for="max">Max</label>
-        <input type="number" id="max" name="max" min="0" max="5" value="5" />
-
-        <p>use zero for unrated</p>
-    </fieldset>
+    <label for="rating">Rating</label>
+    <select id="rating" name="rating">
+        <option value="all">All</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
 </form>
