--- a/client/src/components/watchedFilter/template.html
+++ b/client/src/components/watchedFilter/template.html
@@ -1,14 +1,17 @@
-<form>
-    <label for="favorites">Favorites</label>
-    <input type="checkbox" id="favorites" name="favorites" value="on" />
-
-    <label for="rating">Rating</label>
-    <select id="rating" name="rating">
-        <option value="all">All</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
+<form class="watched-filter">
+    <div>
+        <label for="favorites">Favorites:</label>
+        <input type="checkbox" id="favorites" name="favorites" value="on" />
+    </div>
+    <div>
+        <label for="rating">Rating:</label>
+        <select id="rating" name="rating">
+            <option value="all">All</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
+    </div>
 </form>
