--- a/client/src/style.css
+++ b/client/src/style.css
@@ -160,7 +160,7 @@ h6 {
 /* Search container */
 
 .search {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     background-color: oklch(1 0 0);
     color: oklch(0 0 0);
 }
@@ -168,11 +168,11 @@ h6 {
 .search__form {
     display: flex;
     flex-flow: row wrap;
-    gap: .75rem;
+    gap: 0.75rem;
     inline-size: 100%;
     background-color: oklch(0.9702 0 0);
     padding: 1.5rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 }
 
 .search__input-wrapper {
@@ -183,9 +183,9 @@ h6 {
 
 .search__input {
     border: 2px solid currentColor;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     block-size: 3rem;
 }
 
@@ -219,11 +219,11 @@ h6 {
     justify-content: center;
     background-color: transparent;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     background-color: oklch(0 0 0);
     color: oklch(1 0 0);
     border: 2px solid oklch(0 0 0);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     block-size: 3rem;
     font-size: 1rem;
     font-weight: 700;
@@ -270,13 +270,12 @@ h6 {
     row-gap: 1.5rem;
 }
 
-
 /* Filmkort */
 
 .movie-card {
     display: grid;
     grid-template-columns: auto;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     background-color: oklch(0.9702 0 0);
     overflow: hidden;
 
@@ -354,7 +353,7 @@ h6 {
 .movie-card__actions {
     display: flex;
     flex-flow: row wrap;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .movie-card__button {
@@ -363,9 +362,9 @@ h6 {
     justify-content: center;
     background-color: transparent;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     border: 2px solid currentColor;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     block-size: 3rem;
     font-size: 1rem;
     font-weight: 700;
@@ -396,12 +395,59 @@ h6 {
     color: oklch(1 0 0);
 }
 
+.movie-card__button--submit {
+    background-color: oklch(0.6379 0.2484 31.02);
+    color: oklch(1 0 0);
+    border-color: oklch(0.6379 0.2484 31.02);
+    margin-block-start: 0.5rem;
+
+    &:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
+}
+
+/* Editable form inputs */
+
+.movie-card__input {
+    display: block;
+    inline-size: 100%;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border: 2px solid currentColor;
+    border-radius: 0.5rem;
+    block-size: 3rem;
+    font-size: 1rem;
+    background-color: oklch(1 0 0);
+
+    @media (width >= 60rem) {
+        inline-size: fit-content;
+        min-inline-size: 12rem;
+    }
+}
+
+.movie-card__textarea {
+    display: block;
+    inline-size: 100%;
+    padding: 1rem;
+    border: 2px solid currentColor;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    background-color: oklch(1 0 0);
+    resize: vertical;
+    min-block-size: 6rem;
+
+    @media (width >= 60rem) {
+        max-inline-size: 30rem;
+    }
+}
+
 /* "Fusk-BEM", hehe */
 
 .movie-card__content-group {
     display: flex;
     flex-flow: column wrap;
-    gap: .25rem;
+    gap: 0.25rem;
 }
 
 .movie-card__content-group-label {
@@ -419,7 +465,7 @@ h6 {
 .movie-cards__empty-list {
     display: flex;
     flex-flow: column wrap;
-    gap: .75rem;
+    gap: 0.75rem;
 }
 
 .movie-cards__empty-list-image {
