--- a/client/src/style.css
+++ b/client/src/style.css
@@ -160,7 +160,7 @@ h6 {
 /* Search container */
 
 .search {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     background-color: oklch(1 0 0);
     color: oklch(0 0 0);
 }
@@ -168,11 +168,11 @@ h6 {
 .search__form {
     display: flex;
     flex-flow: row wrap;
-    gap: .75rem;
+    gap: 0.75rem;
     inline-size: 100%;
     background-color: oklch(0.9702 0 0);
     padding: 1.5rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 }
 
 .search__input-wrapper {
@@ -183,9 +183,9 @@ h6 {
 
 .search__input {
     border: 2px solid currentColor;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     block-size: 3rem;
 }
 
@@ -219,11 +219,11 @@ h6 {
     justify-content: center;
     background-color: transparent;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     background-color: oklch(0 0 0);
     color: oklch(1 0 0);
     border: 2px solid oklch(0 0 0);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     block-size: 3rem;
     font-size: 1rem;
     font-weight: 700;
@@ -245,6 +245,14 @@ h6 {
     flex-flow: column wrap;
     row-gap: 1.5rem;
     margin-block: 1.5rem;
+}
+
+.page__header {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1.5rem;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 .page__title {
@@ -270,13 +278,12 @@ h6 {
     row-gap: 1.5rem;
 }
 
-
 /* Filmkort */
 
 .movie-card {
     display: grid;
     grid-template-columns: auto;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     background-color: oklch(0.9702 0 0);
     overflow: hidden;
 
@@ -354,7 +361,7 @@ h6 {
 .movie-card__actions {
     display: flex;
     flex-flow: row wrap;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .movie-card__button {
@@ -363,9 +370,9 @@ h6 {
     justify-content: center;
     background-color: transparent;
     padding-inline: 1rem;
-    padding-block: .5rem;
+    padding-block: 0.5rem;
     border: 2px solid currentColor;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     block-size: 3rem;
     font-size: 1rem;
     font-weight: 700;
@@ -401,7 +408,7 @@ h6 {
 .movie-card__content-group {
     display: flex;
     flex-flow: column wrap;
-    gap: .25rem;
+    gap: 0.25rem;
 }
 
 .movie-card__content-group-label {
@@ -419,7 +426,7 @@ h6 {
 .movie-cards__empty-list {
     display: flex;
     flex-flow: column wrap;
-    gap: .75rem;
+    gap: 0.75rem;
 }
 
 .movie-cards__empty-list-image {
@@ -436,7 +443,6 @@ h6 {
     font-size: 1.125rem;
     font-weight: 400;
 }
-
 /* Footer */
 
 .footer {
@@ -475,8 +481,8 @@ h6 {
     background-color: oklch(1 0 0);
     color: oklch(0 0 0);
     border: none;
-    border-radius: .5rem;
-    padding: .5rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
     inline-size: 3rem;
     block-size: 3rem;
     cursor: pointer;
