--- a/client/src/components/watchedFilter/template.html
+++ b/client/src/components/watchedFilter/template.html
@@ -7,11 +7,11 @@
         <label for="rating">Rating:</label>
         <select id="rating" name="rating">
             <option value="all">All</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
+            <option value="1">⭐</option>
+            <option value="2">⭐⭐</option>
+            <option value="3">⭐⭐⭐</option>
+            <option value="4">⭐⭐⭐⭐</option>
+            <option value="5">⭐⭐⭐⭐⭐</option>
         </select>
     </div>
 </form>
