--- a/client/src/style.css
+++ b/client/src/style.css
@@ -441,7 +441,7 @@ h6 {
 .movie-cards__empty-list {
     display: grid;
     justify-items: center;
-    gap: .75rem;
+    gap: 0.75rem;
     overflow: hidden;
 }
 
@@ -460,10 +460,12 @@ h6 {
 @keyframes pulsate {
     from {
         transform: scaleX(1);
+        filter: blur(0px);
     }
 
     to {
         transform: scaleX(1.5);
+        filter: blur(100px);
     }
 }
 
