--- a/client/src/components/watchedFilter/template.html
+++ b/client/src/components/watchedFilter/template.html
@@ -14,4 +14,7 @@
             <option value="5">⭐⭐⭐⭐⭐</option>
         </select>
     </div>
+    <div>
+        <button>Clear filter</button>
+    </div>
 </form>
