--- a/client/src/style.css
+++ b/client/src/style.css
@@ -500,7 +500,7 @@ h6 {
     }
 }
 
-.footer__group-info {
+.footer__team {
     grid-area: group;
     place-self: center left;
     font-weight: 700;
@@ -529,7 +529,7 @@ h6 {
     block-size: 1.5rem;
 }
 
-.footer__disclaimer-label {
+.footer__info {
     grid-area: disclaimer;
     grid-column: span 2;
     place-self: center left;
@@ -537,4 +537,8 @@ h6 {
     @media (width >=60rem) {
         grid-column: span 1;
     }
+}
+
+.footer__info-text:first-child {
+    margin-block-end: 1.5rem;
 }
