--- a/client/src/style.css
+++ b/client/src/style.css
@@ -35,7 +35,8 @@ picture {
 
 button,
 input,
-textarea {
+textarea,
+select {
     font: inherit;
 }
 
@@ -198,6 +199,7 @@ h6 {
     padding-inline: 1rem;
     padding-block: 0.5rem;
     block-size: 3rem;
+    appearance: none;
 }
 
 .search__input-wrapper .search__input {
@@ -302,6 +304,21 @@ h6 {
         grid-template-columns: 1fr 2fr;
         row-gap: 1.5rem;
     }
+}
+
+.movie-card__select {
+    inline-size: 100%;
+    background-color: oklch(1 0 0);
+    border: 2px solid currentColor;
+    border-radius: 0.5rem;
+    padding-inline: 1rem;
+    padding-inline-end: 2.5rem;
+    padding-block: 0.5rem;
+    block-size: 3rem;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
 }
 
 .movie-card__textarea {
