--- a/client/src/style.css
+++ b/client/src/style.css
@@ -534,16 +534,18 @@ h6 {
 
 /* Inga filmer att visa */
 
-.movie-cards__empty-list {
+.empty-state {
     display: grid;
-    justify-items: center;
+    justify-items: start;
     gap: 0.75rem;
     overflow: hidden;
+    max-inline-size: 36.5rem; /* Halva container */
 }
 
 /* Strictly for the lulz */
 
-.movie-cards__empty-list-image {
+.empty-state__image {
+    place-self: center;
     animation: pulsate 2s ease-in-out infinite alternate;
 
     & img {
@@ -563,14 +565,26 @@ h6 {
     }
 }
 
-.movie-cards__empty-list-heading {
-    font-size: 1.25rem;
+.empty-state__heading {
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
-.movie-cards__empty-list-text {
+.empty-state__text {
     font-size: 1.125rem;
     font-weight: 400;
+}
+
+.empty-state__link {
+    font-weight: 700;
+    text-decoration: none;
+    color: oklch(0 0 0);
+
+    @media (hover: hover) {
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .filter {
